OCLOMRS-380: Fix background overlap on the create/edit concepts page. (#288)

--- a/src/styles/dictionary_concepts.scss
+++ b/src/styles/dictionary_concepts.scss
@@ -377,4 +377,9 @@ input:-webkit-autofill:active {
     padding-right: 0;
     padding-left: 0;
   }
+
+  .concept-table {
+    width: 100%;
+    overflow: auto;
+  }
 }
